--- a/brain/requirements.txt
+++ b/brain/requirements.txt
@@ -1,5 +1,6 @@
 aiohttp==3.9.3
 aiosignal==1.3.1
+albumentations==1.3.1
 anyio==4.2.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -8,6 +9,7 @@ asttokens==2.4.1
 async-lru==2.0.4
 async-timeout==4.0.3
 attrs==23.2.0
+audioread==3.0.1
 Babel==2.14.0
 beautifulsoup4==4.12.3
 black==24.1.1
@@ -31,6 +33,7 @@ fqdn==1.5.1
 frozenlist==1.4.1
 fsspec==2023.12.2
 idna==3.6
+imageio==2.33.1
 ipykernel==6.29.0
 ipython==8.20.0
 isoduration==20.11.0
@@ -50,13 +53,18 @@ jupyter_server_terminals==0.5.2
 jupyterlab==4.0.12
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.25.2
+kaggle==1.6.5
 kiwisolver==1.4.5
+lazy_loader==0.3
+librosa==0.10.1
 lightning-utilities==0.10.1
+llvmlite==0.42.0
 MarkupSafe==2.1.4
 matplotlib==3.8.2
 matplotlib-inline==0.1.6
 mistune==3.0.2
 mpmath==1.3.0
+msgpack==1.0.7
 multidict==6.0.4
 mypy-extensions==1.0.0
 nbclient==0.9.0
@@ -66,6 +74,7 @@ nest-asyncio==1.6.0
 networkx==3.2.1
 notebook==7.0.7
 notebook_shim==0.2.3
+numba==0.59.0
 numpy==1.26.3
 nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
@@ -79,6 +88,7 @@ nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.19.3
 nvidia-nvjitlink-cu12==12.3.101
 nvidia-nvtx-cu12==12.1.105
+opencv-python-headless==4.9.0.80
 overrides==7.7.0
 packaging==23.2
 pandas==2.2.0
@@ -88,6 +98,7 @@ pathspec==0.12.1
 pexpect==4.9.0
 pillow==10.2.0
 platformdirs==4.1.0
+pooch==1.8.0
 prometheus-client==0.19.0
 prompt-toolkit==3.0.43
 psutil==5.9.8
@@ -99,25 +110,33 @@ Pygments==2.17.2
 pyparsing==3.1.1
 python-dateutil==2.8.2
 python-json-logger==2.0.7
+python-slugify==8.0.4
 pytorch-lightning==2.1.3
 pytz==2023.4
+PyWavelets==1.5.0
 PyYAML==6.0.1
 pyzmq==25.1.2
+qudida==0.0.4
 referencing==0.33.0
 requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.17.1
+scikit-image==0.22.0
 scikit-learn==1.4.0
 scipy==1.12.0
 Send2Trash==1.8.2
 six==1.16.0
 sniffio==1.3.0
+soundfile==0.12.1
 soupsieve==2.5
+soxr==0.3.7
 stack-data==0.6.3
 sympy==1.12
 terminado==0.18.0
+text-unidecode==1.3
 threadpoolctl==3.2.0
+tifffile==2024.1.30
 tinycss2==1.2.1
 tokenize-rt==5.2.0
 tomli==2.0.1
