--- a/.github/workflows/kaggle_upload.yml
+++ b/.github/workflows/kaggle_upload.yml
@@ -3,8 +3,9 @@ name: Upload Python Package to Kaggle
 on:
   push:
     branches:
-      - master  # Trigger the workflow on pushes to the master branch
-
+      - master
+      - feat-its-all-coming-together
+      
 jobs:
   upload_to_kaggle:
     runs-on: ubuntu-latest
@@ -15,19 +16,18 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.10'  # Use Python 3.10
+        python-version: '3.10'
 
     - name: Install Dependencies
       run: |
         pip install -r brain/requirements.txt
         pip install kaggle
-        # This installs the dependencies listed in your requirements.txt file and the Kaggle API
 
     - name: Build Python Package
       run: |
         cd brain
         python setup.py sdist bdist_wheel
-        # Builds the package. Make sure your setup.py is configured correctly.
+        cp dataset-metadata.json dist/
 
     - name: Authenticate with Kaggle
       env:
@@ -40,6 +40,4 @@ jobs:
 
     - name: Upload Package to Kaggle
       run: |
-        # You'll need to adjust this command based on the actual path to your package distributions
-        # and depending on whether you're creating a new dataset or updating an existing one.
-        kaggle datasets version -p brain/dist -m "Updated via GitHub Actions"
+        kaggle datasets version -p dist -m "Updated via GitHub Actions"
