Fix workflow to include branch

--- a/.github/workflows/kaggle_upload.yml
+++ b/.github/workflows/kaggle_upload.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - master
       - feat-its-all-coming-together
+      - feat-change-training-loop
 
 jobs:
   upload_to_kaggle:
