fix: Kaggle Upload fix

--- a/.github/workflows/kaggle_upload.yml
+++ b/.github/workflows/kaggle_upload.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          pip install -r brain/requirements.txt
+          pip install -r requirements.txt
           pip install kaggle
           pip install wheel
 
