--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
   "python.analysis.typeCheckingMode": "off",
   "python.analysis.autoImportCompletions": true,
-  "python.analysis.extraPaths": ["./brain/data/kaggle-kl-div"]
+  "python.analysis.extraPaths": ["./data/kaggle-kl-div"]
 }
