--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==2.1.0
 aiohttp==3.9.3
 aiosignal==1.3.1
 albumentations==1.3.1
@@ -6,6 +7,7 @@ argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
 asttokens==2.4.1
+astunparse==1.6.3
 async-lru==2.0.4
 async-timeout==4.0.3
 attrs==23.2.0
@@ -14,6 +16,7 @@ Babel==2.14.0
 beautifulsoup4==4.12.3
 black==24.1.1
 bleach==6.1.0
+catboost==1.2.3
 certifi==2023.11.17
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -21,22 +24,31 @@ click==8.1.7
 comm==0.2.1
 contourpy==1.2.0
 cycler==0.12.1
-d2l
+d2l==0.17.0
 debugpy==1.8.0
 decorator==5.1.1
 defusedxml==0.7.1
+dm-tree==0.1.8
 exceptiongroup==1.2.0
 executing==2.0.1
 fastjsonschema==2.19.1
 filelock==3.13.1
+flatbuffers==24.3.7
 fonttools==4.47.2
 fqdn==1.5.1
 frozenlist==1.4.1
 fsspec==2023.12.2
+gast==0.5.4
+google-pasta==0.2.0
+graphviz==0.20.1
+grpcio==1.62.1
+h5py==3.10.0
+huggingface-hub==0.21.4
 idna==3.6
 imageio==2.33.1
 ipykernel==6.29.0
 ipython==8.20.0
+ipywidgets==8.1.2
 isoduration==20.11.0
 jedi==0.19.1
 Jinja2==3.1.3
@@ -45,6 +57,8 @@ json5==0.9.14
 jsonpointer==2.4
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
+jupyter==1.0.0
+jupyter-console==6.6.3
 jupyter-events==0.9.0
 jupyter-lsp==2.2.2
 jupyter_client==8.6.0
@@ -54,20 +68,28 @@ jupyter_server_terminals==0.5.2
 jupyterlab==4.0.12
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.25.2
+jupyterlab_widgets==3.0.10
 kaggle==1.6.5
+keras==3.0.5
 kiwisolver==1.4.5
 lazy_loader==0.3
+libclang==16.0.6
 librosa==0.10.1
 lightning-utilities==0.10.1
 llvmlite==0.42.0
+Markdown==3.5.2
+markdown-it-py==3.0.0
 MarkupSafe==2.1.4
 matplotlib==3.8.2
 matplotlib-inline==0.1.6
+mdurl==0.1.2
 mistune==3.0.2
+ml-dtypes==0.3.2
 mpmath==1.3.0
 msgpack==1.0.7
 multidict==6.0.4
 mypy-extensions==1.0.0
+namex==0.0.7
 nbclient==0.9.0
 nbconvert==7.14.2
 nbformat==5.9.2
@@ -90,6 +112,7 @@ nvidia-nccl-cu12==2.19.3
 nvidia-nvjitlink-cu12==12.3.101
 nvidia-nvtx-cu12==12.1.105
 opencv-python-headless==4.9.0.80
+opt-einsum==3.3.0
 overrides==7.7.0
 packaging==23.2
 pandas==2.2.0
@@ -99,9 +122,11 @@ pathspec==0.12.1
 pexpect==4.9.0
 pillow==10.2.0
 platformdirs==4.1.0
+plotly==5.20.0
 pooch==1.8.0
 prometheus-client==0.19.0
 prompt-toolkit==3.0.43
+protobuf==4.25.3
 psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
@@ -117,16 +142,22 @@ pytz==2023.4
 PyWavelets==1.5.0
 PyYAML==6.0.1
 pyzmq==25.1.2
+qtconsole==5.5.1
+QtPy==2.4.1
 qudida==0.0.4
 referencing==0.33.0
+regex==2023.12.25
 requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rich==13.7.1
 rpds-py==0.17.1
+safetensors==0.4.2
 scikit-image==0.22.0
 scikit-learn==1.4.0
 scipy==1.12.0
 Send2Trash==1.8.2
+setuptools==69.2.0
 six==1.16.0
 sniffio==1.3.0
 soundfile==0.12.1
@@ -134,12 +165,19 @@ soupsieve==2.5
 soxr==0.3.7
 stack-data==0.6.3
 sympy==1.12
+tenacity==8.2.3
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.1
+termcolor==2.4.0
 terminado==0.18.0
 text-unidecode==1.3
 threadpoolctl==3.2.0
 tifffile==2024.1.30
+timm==0.9.16
 tinycss2==1.2.1
 tokenize-rt==5.2.0
+tokenizers==0.15.2
 tomli==2.0.1
 torch==2.2.0
 torch_geometric==2.4.0
@@ -150,6 +188,7 @@ torchvision==0.17.0
 tornado==6.4
 tqdm==4.66.1
 traitlets==5.14.1
+transformers==4.38.2
 triton==2.2.0
 types-python-dateutil==2.8.19.20240106
 typing_extensions==4.9.0
@@ -160,4 +199,8 @@ wcwidth==0.2.13
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.7.0
+Werkzeug==3.0.1
+wheel==0.43.0
+widgetsnbextension==4.0.10
+wrapt==1.16.0
 yarl==1.9.4
