--- a/.github/workflows/kaggle_upload.yml
+++ b/.github/workflows/kaggle_upload.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - master
       - feat-its-all-coming-together
+      - feat-change-training-loop
+      - feat-integrate-wav2vec
 
 jobs:
   upload_to_kaggle:
@@ -20,13 +22,12 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          pip install -r brain/requirements.txt
+          pip install -r requirements.txt
           pip install kaggle
           pip install wheel
 
       - name: Build Python Package
         run: |
-          cd brain
           python setup.py sdist bdist_wheel
           cp dataset-metadata.json dist/
 
@@ -39,7 +40,10 @@ jobs:
           echo "{\"username\":\"${KAGGLE_USERNAME}\",\"key\":\"${KAGGLE_KEY}\"}" > ~/.kaggle/kaggle.json
           chmod 600 ~/.kaggle/kaggle.json
 
+      - name: Capture Last Commit Message
+        id: get_commit_message
+        run: echo "::set-output name=message::$(git log -1 --pretty=%B)"
+
       - name: Upload Package to Kaggle
         run: |
-          kaggle datasets version -p dist -m "Updated via GitHub Actions"
-        working-directory: brain
+          kaggle datasets version -p dist -m "Updated via GitHub Actions: ${{ steps.get_commit_message.outputs.message }}"
